--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-*** FeynRules ***
+# FeynRules
 - webpage: https://feynrules.irmp.ucl.ac.be
 - version: 2.3
 - download location: http://feynrules.irmp.ucl.ac.be/downloads/feynrules-current.tar.gz
